syntax = "proto3";
option go_package = "./proto";

package ratelimiter;

service RateLimiter {
  // We define the RPC. The Interceptor will handle the "ResourceExhausted"
  // error and inject the X-RateLimit headers automatically.
  rpc CheckLimit(LimitRequest) returns (LimitResponse);
}

message LimitRequest {
  string user_id = 1;
}

message LimitResponse {
  bool allowed = 1;
}
